--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
   <body>
     <noscript>Você precisa habilitar JavaScript para poder utilizar esta página.</noscript>
     <div id="root"></div>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
 </html>
